--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body{
     background-color: lightblue;
     display: grid;
     grid-template-columns: 1.1fr 2fr;
-    box-shadow: 0 35px 55px rgba(0,0,0,0.1);
+    /* box-shadow: 0 35px 55px rgba(0,0,0,0.1); */
 }
 
 .container .left-side{
